--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-/practice.iml
+# Default ignored files
+/shelf/
+/workspace.xml
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+/out/
+/.idea
